// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatekeeper/custom/APICallback renders correctly 1`] = `
<APICallback
  ErrorComponent={[Function]}
  HTTP404Component={[Function]}
  LoadingComponent={[Function]}
  SuccessfulLoginComponent={[Function]}
  UnSuccessfulLoginComponent={[Function]}
  apiURL="http://example.com"
  authSuccess={true}
  authenticateActionCreator={[Function]}
  authenticated={true}
  recordResultActionCreator={[Function]}
  sessionData={
    Object {
      "authenticated": true,
      "extraData": Object {
        "api_token": "the api token",
        "city": "",
        "country": "",
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "oAuth2Data": Object {
          "access_token": "iLoveOov",
          "expires_in": "36000",
          "scope": "read write",
          "state": "abc",
          "token_type": "Bearer",
        },
        "organization": "",
        "require_auth": true,
        "temp_token": "the temp token",
        "twitter": "",
        "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
        "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
        "username": "moshthepitt",
        "website": "",
      },
      "user": Object {
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "username": "moshthepitt",
      },
    }
  }
  sessionUser={
    Object {
      "api_token": "the api token",
      "city": "",
      "country": "",
      "email": "mosh@example.com",
      "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
      "name": "mosh",
      "organization": "",
      "require_auth": true,
      "temp_token": "the temp token",
      "twitter": "",
      "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
      "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
      "username": "moshthepitt",
      "website": "",
    }
  }
>
  <BaseCallbackComponent
    LoadingComponent={[Function]}
    SuccessfulLoginComponent={[Function]}
    UnSuccessfulLoginComponent={[Function]}
    authSuccess={true}
    authenticated={true}
    sessionData={
      Object {
        "authenticated": true,
        "extraData": Object {
          "api_token": "the api token",
          "city": "",
          "country": "",
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "oAuth2Data": Object {
            "access_token": "iLoveOov",
            "expires_in": "36000",
            "scope": "read write",
            "state": "abc",
            "token_type": "Bearer",
          },
          "organization": "",
          "require_auth": true,
          "temp_token": "the temp token",
          "twitter": "",
          "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
          "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
          "username": "moshthepitt",
          "website": "",
        },
        "user": Object {
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "username": "moshthepitt",
        },
      }
    }
    sessionUser={
      Object {
        "api_token": "the api token",
        "city": "",
        "country": "",
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "organization": "",
        "require_auth": true,
        "temp_token": "the temp token",
        "twitter": "",
        "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
        "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
        "username": "moshthepitt",
        "website": "",
      }
    }
  >
    <SuccessfulLogin
      extraData={
        Object {
          "authenticated": true,
          "extraData": Object {
            "api_token": "the api token",
            "city": "",
            "country": "",
            "email": "mosh@example.com",
            "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
            "name": "mosh",
            "oAuth2Data": Object {
              "access_token": "iLoveOov",
              "expires_in": "36000",
              "scope": "read write",
              "state": "abc",
              "token_type": "Bearer",
            },
            "organization": "",
            "require_auth": true,
            "temp_token": "the temp token",
            "twitter": "",
            "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
            "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
            "username": "moshthepitt",
            "website": "",
          },
          "user": Object {
            "email": "mosh@example.com",
            "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
            "name": "mosh",
            "username": "moshthepitt",
          },
        }
      }
      user={
        Object {
          "api_token": "the api token",
          "city": "",
          "country": "",
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "organization": "",
          "require_auth": true,
          "temp_token": "the temp token",
          "twitter": "",
          "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
          "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
          "username": "moshthepitt",
          "website": "",
        }
      }
    >
      <div
        className="gatekeeper-cb"
      >
        <p
          className="gatekeeper-p"
        >
          Welcome back, 
          moshthepitt
          !
        </p>
      </div>
    </SuccessfulLogin>
  </BaseCallbackComponent>
</APICallback>
`;

exports[`gatekeeper/custom/APICallback renders correctly when loading 1`] = `
<APICallback
  ErrorComponent={[Function]}
  HTTP404Component={[Function]}
  LoadingComponent={[Function]}
  SuccessfulLoginComponent={[Function]}
  UnSuccessfulLoginComponent={[Function]}
  apiURL="http://example.com"
  authSuccess={null}
  authenticateActionCreator={[Function]}
  authenticated={true}
  recordResultActionCreator={[Function]}
  sessionData={
    Object {
      "authenticated": true,
      "extraData": Object {
        "api_token": "the api token",
        "city": "",
        "country": "",
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "oAuth2Data": Object {
          "access_token": "iLoveOov",
          "expires_in": "36000",
          "scope": "read write",
          "state": "abc",
          "token_type": "Bearer",
        },
        "organization": "",
        "require_auth": true,
        "temp_token": "the temp token",
        "twitter": "",
        "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
        "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
        "username": "moshthepitt",
        "website": "",
      },
      "user": Object {
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "username": "moshthepitt",
      },
    }
  }
  sessionUser={
    Object {
      "api_token": "the api token",
      "city": "",
      "country": "",
      "email": "mosh@example.com",
      "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
      "name": "mosh",
      "organization": "",
      "require_auth": true,
      "temp_token": "the temp token",
      "twitter": "",
      "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
      "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
      "username": "moshthepitt",
      "website": "",
    }
  }
>
  <BaseCallbackComponent
    LoadingComponent={[Function]}
    SuccessfulLoginComponent={[Function]}
    UnSuccessfulLoginComponent={[Function]}
    authSuccess={null}
    authenticated={true}
    sessionData={
      Object {
        "authenticated": true,
        "extraData": Object {
          "api_token": "the api token",
          "city": "",
          "country": "",
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "oAuth2Data": Object {
            "access_token": "iLoveOov",
            "expires_in": "36000",
            "scope": "read write",
            "state": "abc",
            "token_type": "Bearer",
          },
          "organization": "",
          "require_auth": true,
          "temp_token": "the temp token",
          "twitter": "",
          "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
          "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
          "username": "moshthepitt",
          "website": "",
        },
        "user": Object {
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "username": "moshthepitt",
        },
      }
    }
    sessionUser={
      Object {
        "api_token": "the api token",
        "city": "",
        "country": "",
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "organization": "",
        "require_auth": true,
        "temp_token": "the temp token",
        "twitter": "",
        "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
        "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
        "username": "moshthepitt",
        "website": "",
      }
    }
  >
    <RenderLoadingComponent>
      <div
        className="gatekeeper-cb"
      >
        <p
          className="gatekeeper-p"
        >
          Please wait...
        </p>
      </div>
    </RenderLoadingComponent>
  </BaseCallbackComponent>
</APICallback>
`;

exports[`gatekeeper/custom/APICallback renders correctly when not authenticated 1`] = `
<APICallback
  ErrorComponent={[Function]}
  HTTP404Component={[Function]}
  LoadingComponent={[Function]}
  SuccessfulLoginComponent={[Function]}
  UnSuccessfulLoginComponent={[Function]}
  apiURL="http://example.com"
  authSuccess={true}
  authenticateActionCreator={[Function]}
  authenticated={false}
  recordResultActionCreator={[Function]}
  sessionData={
    Object {
      "authenticated": true,
      "extraData": Object {
        "api_token": "the api token",
        "city": "",
        "country": "",
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "oAuth2Data": Object {
          "access_token": "iLoveOov",
          "expires_in": "36000",
          "scope": "read write",
          "state": "abc",
          "token_type": "Bearer",
        },
        "organization": "",
        "require_auth": true,
        "temp_token": "the temp token",
        "twitter": "",
        "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
        "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
        "username": "moshthepitt",
        "website": "",
      },
      "user": Object {
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "username": "moshthepitt",
      },
    }
  }
  sessionUser={
    Object {
      "api_token": "the api token",
      "city": "",
      "country": "",
      "email": "mosh@example.com",
      "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
      "name": "mosh",
      "organization": "",
      "require_auth": true,
      "temp_token": "the temp token",
      "twitter": "",
      "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
      "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
      "username": "moshthepitt",
      "website": "",
    }
  }
>
  <BaseCallbackComponent
    LoadingComponent={[Function]}
    SuccessfulLoginComponent={[Function]}
    UnSuccessfulLoginComponent={[Function]}
    authSuccess={true}
    authenticated={false}
    sessionData={
      Object {
        "authenticated": true,
        "extraData": Object {
          "api_token": "the api token",
          "city": "",
          "country": "",
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "oAuth2Data": Object {
            "access_token": "iLoveOov",
            "expires_in": "36000",
            "scope": "read write",
            "state": "abc",
            "token_type": "Bearer",
          },
          "organization": "",
          "require_auth": true,
          "temp_token": "the temp token",
          "twitter": "",
          "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
          "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
          "username": "moshthepitt",
          "website": "",
        },
        "user": Object {
          "email": "mosh@example.com",
          "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
          "name": "mosh",
          "username": "moshthepitt",
        },
      }
    }
    sessionUser={
      Object {
        "api_token": "the api token",
        "city": "",
        "country": "",
        "email": "mosh@example.com",
        "gravatar": "https://secure.gravatar.com/avatar/ae22ab897231db07205bd5d00e64cbbf?d=https%3A%2F%2Fona.io%2Fstatic%2Fimages%2Fdefault_avatar.png&s=60",
        "name": "mosh",
        "organization": "",
        "require_auth": true,
        "temp_token": "the temp token",
        "twitter": "",
        "url": "https://stage-api.ona.io/api/v1/profiles/moshthepitt",
        "user": "https://stage-api.ona.io/api/v1/users/moshthepitt",
        "username": "moshthepitt",
        "website": "",
      }
    }
  >
    <RenderErrorComponent>
      <div
        className="gatekeeper-cb"
      >
        <p
          className="gatekeeper-p"
        >
          An error occurred!
        </p>
      </div>
    </RenderErrorComponent>
  </BaseCallbackComponent>
</APICallback>
`;
